Define interfaces for Group APIs
